--- a/Projects/ProjectStarkSemi/ConoscopeWindow.xaml
+++ b/Projects/ProjectStarkSemi/ConoscopeWindow.xaml
@@ -5,9 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:im="clr-namespace:ColorVision.ImageEditor;assembly=ColorVision.ImageEditor"
         xmlns:local="clr-namespace:ProjectStarkSemi"
+        xmlns:Conoscope="clr-namespace:ProjectStarkSemi.Conoscope"
         xmlns:properties="clr-namespace:ProjectStarkSemi.Properties"
-       xmlns:ScottPlot="clr-namespace:ScottPlot.WPF;assembly=ScottPlot.WPF"
+        xmlns:ScottPlot="clr-namespace:ScottPlot.WPF;assembly=ScottPlot.WPF"
         mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance  Conoscope:ConoscopeManager}"
         Title="Conoscope" Height="720" Width="1280" Background="{StaticResource GlobalBackground}" Initialized="Window_Initialized">
     <Grid Margin="5,5,5,0">
         <Grid.RowDefinitions>
@@ -655,6 +657,22 @@
                                     <ComboBox x:Name="cbPolarAngleLines" 
                                               MinWidth="100" 
                                               SelectionChanged="cbPolarAngleLines_SelectionChanged"/>
+                                    <Button Grid.Column="1" Margin="5,0,5,0" HorizontalAlignment="Left" Command="{Binding EditConoscopeConfigCommand}" Padding="2" Height="28" Width="28" >
+                                        <Button.Triggers>
+                                            <EventTrigger RoutedEvent="Button.Click">
+                                                <BeginStoryboard>
+                                                    <Storyboard>
+                                                        <DoubleAnimation Storyboard.TargetName="rotateTransform2" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                                    </Storyboard>
+                                                </BeginStoryboard>
+                                            </EventTrigger>
+                                        </Button.Triggers>
+                                        <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="16" Foreground="{DynamicResource GlobalTextBrush}">
+                                            <TextBlock.RenderTransform>
+                                                <RotateTransform x:Name="rotateTransform2" CenterX="8" CenterY="8"/>
+                                            </TextBlock.RenderTransform>
+                                        </TextBlock>
+                                    </Button>
                                 </StackPanel>
                             </StackPanel>
                         </GroupBox>
