--- a/Projects/ProjectARVRPro/Process/ProcessManagerWindow.xaml
+++ b/Projects/ProjectARVRPro/Process/ProcessManagerWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ProjectARVRPro.Process"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:ProcessManager}"
-        Title="流程处理配置" Height="450" Width="820" Initialized="Window_Initialized">
+        Title="流程处理配置" Height="720" Width="1280" Initialized="Window_Initialized">
     <Window.Resources>
         <local:TypeNameConverter x:Key="TypeNameConverter"/>
     </Window.Resources>
@@ -87,8 +87,18 @@
 
         <Grid Grid.Row="3">
             <ListView ItemsSource="{Binding ProcessMetas}" SelectedItem="{Binding SelectedProcessMeta}" x:Name="lvMetas">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource ListViewItemBaseStyle.Small}">
+                    </Style>
+                </ListView.ItemContainerStyle>
                 <ListView.View>
                     <GridView>
+                        <GridView.ColumnHeaderContainerStyle>
+                            <Style TargetType="{x:Type GridViewColumnHeader}" BasedOn="{StaticResource GridViewColumnHeaderBase}">
+                                <Setter Property="Visibility" Value="Visible"/>
+                                <Setter Property="Background" Value="Transparent"/>
+                            </Style>
+                        </GridView.ColumnHeaderContainerStyle>
                         <GridViewColumn Header="名称" Width="160" DisplayMemberBinding="{Binding Name}"/>
                         <GridViewColumn Header="流程模板" Width="180" DisplayMemberBinding="{Binding FlowTemplate}"/>
                         <GridViewColumn Header="处理类" Width="200" DisplayMemberBinding="{Binding ProcessTypeName}"/>
