--- a/Plugins/Pattern/PatternWindow.xaml
+++ b/Plugins/Pattern/PatternWindow.xaml
@@ -43,7 +43,7 @@
                     </Button>
                     <Button Content="导出" Command="{Binding ExportZipCommand}" ToolTip="导出所有模板为ZIP" Margin="0,0,8,0"/>
                     <Button Content="导入" Command="{Binding ImportZipCommand}" ToolTip="导入ZIP模板组"/>
-                    <Button Content="投影工具" Command="{Binding ImportZipCommand}" ToolTip="导入ZIP模板组"/>
+                    <Button Content="投影工具" Command="{Binding OpenImageProjectorCommand}" ToolTip="导入ZIP模板组"/>
                 </StackPanel>
                 <!-- 操作按钮组2 -->
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,8">
