--- a/Engine/ColorVision.Engine/Templates/Flow/DisplayFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/DisplayFlow.xaml
@@ -87,7 +87,10 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Ready" Visibility="{Binding Config.IsReady,Converter={StaticResource bool2VisibilityConverter}}"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding ServiceConfig.RegistrationCenterServiceInfo.FileVersion}" Margin="0,0,5,0"/>
+                        <TextBlock Text="Ready" Visibility="{Binding Config.IsReady,Converter={StaticResource bool2VisibilityConverter}}"/>
+                    </StackPanel>
                     <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Height="35">
                         <Button Content="{x:Static properties:Resources.ExecutionProcess}"  x:Name="ButtonRun" FontWeight="Bold" FontSize="16" Click="Button_FlowRun_Click" />
                         <Button Content="{x:Static properties:Resources.StopProcess}"  x:Name="ButtonStop"  FontWeight="Bold" Visibility="Collapsed" FontSize="16" Click="Button_FlowStop_Click" />
