--- a/Projects/ProjectStarkSemi/ConoscopeWindow.xaml
+++ b/Projects/ProjectStarkSemi/ConoscopeWindow.xaml
@@ -367,42 +367,42 @@
                             <CheckBox x:Name="chkShowRed" 
                                           Content="R" 
                                           Foreground="Red" 
-                                          IsChecked="{Binding IsShowRedChannel}"
+                                          IsChecked="{Binding Config.IsShowRedChannel}"
                                           Margin="5,0"
                                           Checked="RgbChannelVisibility_Changed"
                                           Unchecked="RgbChannelVisibility_Changed"/>
                             <CheckBox x:Name="chkShowGreen" 
                                           Content="G" 
                                           Foreground="Green" 
-                                          IsChecked="{Binding IsShowGreenChannel}"
+                                          IsChecked="{Binding Config.IsShowGreenChannel}"
                                           Margin="5,0"
                                           Checked="RgbChannelVisibility_Changed"
                                           Unchecked="RgbChannelVisibility_Changed"/>
                             <CheckBox x:Name="chkShowBlue" 
                                           Content="B" 
                                           Foreground="Blue" 
-                                          IsChecked="{Binding IsShowBlueChannel}"
+                                          IsChecked="{Binding Config.IsShowBlueChannel}"
                                           Margin="5,0"
                                           Checked="RgbChannelVisibility_Changed"
                                           Unchecked="RgbChannelVisibility_Changed"/>
                             <CheckBox x:Name="chkShowXlue" 
                                           Content="X" 
                                           Foreground="Gold" 
-                                          IsChecked="{Binding IsShowXChannel}"
+                                          IsChecked="{Binding Config.IsShowXChannel}"
                                           Margin="5,0"
                                           Checked="RgbChannelVisibility_Changed"
                                           Unchecked="RgbChannelVisibility_Changed"/>
                             <CheckBox x:Name="chkShowYlue" 
                                           Content="Y" 
                                           Foreground="Gray" 
-                                          IsChecked="{Binding IsShowYChannel}"
+                                          IsChecked="{Binding Config.IsShowYChannel}"
                                           Margin="5,0"
                                           Checked="RgbChannelVisibility_Changed"
                                           Unchecked="RgbChannelVisibility_Changed"/>
                             <CheckBox x:Name="chkShowZlue" 
                                           Content="Z" 
                                           Foreground="Violet" 
-                                          IsChecked="{Binding IsShowZChannel}"
+                                          IsChecked="{Binding Config.IsShowZChannel}"
                                           Margin="5,0"
                                           Checked="RgbChannelVisibility_Changed"
                                           Unchecked="RgbChannelVisibility_Changed"/>
